stoping the form jump

--- a/css/main.css
+++ b/css/main.css
@@ -940,7 +940,7 @@ nav#menu #menu-nav li a:hover {
 
 #contact-form input,
 #contact-form textarea {
-  border: none;
+	border: 1px solid #26292E;
 	-webkit-border-radius: 0;
 	-moz-border-radius: 0;
   border-radius: 0;
